interpreter/tests/test_files/neg/bad_flow_locality.s
	mov r1 pc
	restrict r1 RWX LOCAL
	restrict r1 RWX GLOBAL
	halt
